# joe

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BOOT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  HEARTBEAT.md  LICENSE  Makefile  README.md  SECURITY.md  dashboard.py  docker-compose.openclaw.yml  main.py  monitor.py  openclaw.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup_wizard.py  telegram_bot.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agent/: after_hours.py  ai_analyst.py  alerts.py  analyzer.py  auto_tuner.py  backtester.py  cache.py  config_validator.py  crypto_data.py  data_loader.py  file_lock.py  models.py  news.py  paper_trader.py  performance_digest.py  performance_tracker.py  pnl_calculator.py  portfolio_analytics.py  position_manager.py  preferences.py  regime.py  reporter.py  resilience.py  risk_profiler.py  risk_profiles.py  scanner.py  scorer.py  stock_extras.py  strategy.py
brokers/: __init__.py  base.py  capital_client.py  ibkr_client.py
cloud/: deploy.sh  entrypoint.sh  quick-deploy.sh
config/: dashboard.yaml  paper_trader.yaml  preferences.yaml.example  risk_profiler.yaml  scoring.yaml  strategies.yaml  strategies_baseline.yaml  trading.yaml  watchlist.yaml
dashboard/: app.py
tests/: test_after_hours.py  test_ai_analyst.py  test_alerts.py  test_analyzer.py  test_broker_base.py  test_config_validator.py  test_crypto_data.py  test_file_lock.py  test_news.py  test_paper_trader.py  test_portfolio_analytics.py  test_regime.py  (+8 more)
(+54 files in other folders)
