[project]
name = "joe-ai"
version = "0.2.0"
description = "AI-powered day trading agent with multi-broker support"
authors = [{ name = "Charles Kithika" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
