[project]
name = "joe-ai"
version = "0.2.0"
description = "AI-powered day trading agent with multi-broker support"
authors = [{ name = "Charles Kithika" }]
license = { text = "MIT" }
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"main.py" = ["E402"]
"monitor.py" = ["E402"]
"telegram_bot.py" = ["E402"]
"dashboard.py" = ["E402"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
